[gd_scene load_steps=11 format=2]

[ext_resource path="res://object/message/message.gd" type="Script" id=1]
[ext_resource path="res://asset/font/arial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://asset/sprite2D/UI/bg_dialog_light_view.png" type="Texture" id=3]
[ext_resource path="res://asset/font/Roboto-Black.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.839216, 0.164706, 0.164706, 1 )
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.00392157, 0.32549, 0.858824, 1 )
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[node name="Message" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.403922 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 400.0
margin_right = 201.0
margin_bottom = 599.0
texture = ExtResource( 3 )
patch_margin_left = 31
patch_margin_top = 69
patch_margin_right = 24
patch_margin_bottom = 29

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 401.0
margin_bottom = 145.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2"]
margin_right = 401.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "THÔNG BÁO"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Panel/VBoxContainer/VBoxContainer2"]
margin_top = 39.0
margin_right = 401.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 199.5, -390 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 149.0
margin_right = 401.0
margin_bottom = 199.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer"]
margin_right = 401.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3
custom_constants/separation = 120
alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Trở lại"

[node name="Button2" type="Button" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 260.0
margin_top = 10.0
margin_right = 330.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Tiếp tục"

[connection signal="button_down" from="Panel/VBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_button_down"]
